--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
+    "graphql-iso-date": "^3.6.1",
     "mongoose": "^6.2.4"
   }
 }
